--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
                         </div>
                         <h1>Haridev Sharma</h1>
                         <h2>Distribution Services</h2>
-                        <p>Served clients in industries as diverse as Entertainment, Hospitality, Media, Travel, IT /
-                            ITES, Real Estate, Infrastructure, Retail and Engineering</p>
+                        <p>Served clients in industries as diverse as Entertainment, Hospitality, IT /
+                            ITES, Real Estate, Infrastructure, Retail</p>
                         <ul>
                             <li><a href="">UAE: 971561024432 </a></li>
                             <li><a href="">INDIA: 9868122415 </a></li>
