--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="wrap">
                 <div class="banner">
                     <div class="banner-content">
-                        <a href="">Propeller Distribution ICT</a>
+                        <a href="">Propeller ICT</a>
                         <h1>Trust and Trustworthiness</h1>
                         <p>Professionally Managed by entrepreneurs expert in <br> multiple domains for two decades.</p>
                     </div>
