--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
     
             </div>
             <div style="color: #b6b7d3;">
-                <p><h6>Disclaimer:UAE unite formation in process</h6> </p>
+                <p><h6>Disclaimer:UAE unit formation in process</h6> </p>
             </div>
         </div>
 
