--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                 <div class="footer-center">
                     <div class="logo2"><img src="images/logo.png" alt=""></div>
 
-                    <p>© 2022 Propeller Distribution LLC. All rights reserved.
+                    <p>© 2022 Propeller ICT. All rights reserved.
                         Privacy Policy | Terms And Conditions</p>
 
                     <ul>
