--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                             <img src="images/logo 2.png" alt="">
                         </div>
                         <h1>Vipin Mohan</h1>
-                        <h2>Director - Client Services</h2>
+                        <h2>Director - Operations</h2>
                         <p>Electronics Engineer with 25+ years of experience in running business enterprises.</p>
                     </div>
                 </div>
@@ -299,6 +299,20 @@
                         </ul>
                     </div>
                 </div>
+
+                
+                <div class="our-team-card">
+                    <div class="our-team-card-content">
+                        <div class="team-img">
+                            <img src="images/t-5.png" alt="" class="">
+                        </div>
+                        <h1>Deepak Soni</h1>
+                        <h2>External Consultant</h2>
+                        <p>Planning and formulation of India strategy, Evaluation of options in terms of organic or
+                            non-organic build-up</p>
+                    </div>
+                </div>
+                
                 <!-- card 2 -->
                 <!-- card 3 -->
 
@@ -318,28 +332,15 @@
                 <div class="our-team-card">
                     <div class="our-team-card-content">
                         <div class="team-img">
-                            <img src="images/logo 2.png" alt="">
+                            <img src="images/t-4.png" alt="">
                         </div>
-                        <h1>Iftikhar Syed</h1>
-                        <h2>Administration</h2>
-                        <p>Mergers & Acquisitions, International Debt, International Private Equity and Venture Capital.
-                        </p>
+                        <h1>Sunil chaudhary</h1>
+                        <h2>Chief - Administration</h2>
                     </div>
                 </div>
                 <!-- card 4 -->
                 <!-- card 5 -->
 
-                <div class="our-team-card">
-                    <div class="our-team-card-content">
-                        <div class="team-img">
-                            <img src="images/t-5.png" alt="" class="">
-                        </div>
-                        <h1>Deepak Soni</h1>
-                        <h2>External Consultant</h2>
-                        <p>Planning and formulation of India strategy, Evaluation of options in terms of organic or
-                            non-organic build-up</p>
-                    </div>
-                </div>
                 <!-- card 5 -->
             </div>
         </section>
@@ -360,14 +361,14 @@
                 <div class="product">
                     <!-- row 1 -->
                     <!-- card 1 -->
-
+<!-- 
                     <div class="product-card">
                         <div class="product-img">
                             <img src="images/t-4.png" alt="">
                         </div>
                         <h1>Sunil chaudhary</h1>
                         <p>Chief - Administration</p>
-                    </div>
+                    </div> -->
 
                     <div class="product-card">
                         <div class="product-img">
@@ -439,13 +440,13 @@
                     <!-- card 1 -->
                     <!-- card 1 -->
 
-                    <div class="product-card">
+                    <!-- <div class="product-card">
                         <div class="product-img">
                             <img src="images/logo 2.png" alt="">
                         </div>
                         <h1>Praveen Prasad</h1>
                         <p>Product Manager, Components India</p>
-                    </div>
+                    </div> -->
                     <!-- card 1 -->
                     <!-- card 1 -->
 
