--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <body>
     <a href="#" id="scroll" style="display:block;"><span>shiva</span></a>
-    <a href="https://wa.me/919711106098?text=Hi%20i%20am%20intersted%20for%20your%20services" id="whatsappicon" target="blank" style="display:block;"><img src="images/whatsappicon-image.png"></a>
+    <a href="https://wa.me/971561024432?text=Hi%20i%20am%20intersted%20for%20your%20services" id="whatsappicon" target="blank" style="display:block;"><img src="images/whatsappicon-image.png"></a>
 
     <!-- nav start -->
     <header id="nav">
@@ -869,34 +869,12 @@
 
 
     <!-- form -->
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script>
-        function sendEmail() {
-
-            //             var name = $('#Name').var();
-            //             var email = $('#Email').var();
-            //             var number = $('#Number').var();
-            //             var message = $('#Message').var();
-
-            // var body= 'Name: '
-
-
-            Email.send({
-                Host: "smtp.gmail.com",
-                Username: "",
-                Password: "",
-                To: '',
-                From: document.getElementById("Email").value,
-                Subject: "This is the subject",
-                Body: "Name" + document.getElementById("Name").var+"<br> Email:" + document.getElementById(
-                        "Email").var+"<br> Number:" + document.getElementById("Number").var+"<br> Message:" +
-                    document.getElementById("Message").var
-
-            }).then(
-                message => alert(message)
-            );
-        }
-    </script>
+    <script
+    src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js"></script>
+       <script src="js/index.js"></script>
+       <!-- JavaScript -->
+   
 </body>
 
 </html>
