--- a/index.html
+++ b/index.html
@@ -319,13 +319,15 @@
                 <div class="our-team-card">
                     <div class="our-team-card-content">
                         <div class="team-img">
-                            <img src="images/logo 2.png" alt="">
+                            <img src="images/t-3a.png" alt="">
                         </div>
-                        <h1>Mahmoud Hussain</h1>
-                        <h2>Partner, UAE Market</h2>
+                        <h1>Amandeep Singh</h1>
+                        <h2>Advisor UAE and GCC</h2>
                         <p>Electronics Engineer with 25+ years of experience in running business enterprises.</p>
                     </div>
                 </div>
+
+
                 <!-- card 3 -->
                 <!-- card 4 -->
 
@@ -352,7 +354,7 @@
             </div>
             <div class="wrap">
                 <div class="manager">
-                    <h1 class="headline2">Product Managers</h1>
+                    <h1 class="headline2">Team Members</h1>
                     <h2 class="line"></h2>
                 </div>
 
@@ -372,10 +374,11 @@
 
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="images/t-3a.png" alt="">
+                            <img src="images/logo 2.png" alt="">
                         </div>
-                        <h1>Amandeep Singh</h1>
-                        <p>Advisor UAE and GCC</p>
+                        <h1>Mahmoud Hussain</h1>    
+                        <p>Partner, UAE Market</p> 
+                        <!-- <p>Electronics Engineer with 25+ years of experience in running business enterprises.</p> -->
                     </div>
 
                     <div class="product-card">
