--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                         </div>
                         <h1>Amandeep Singh</h1>
                         <h2>Advisor UAE and GCC</h2>
-                        <p>Electronics Engineer with 25+ years of experience in running business enterprises.</p>
+                        <!-- <p>Electronics Engineer with 25+ years of experience in running business enterprises.</p> -->
                     </div>
                 </div>
 
