--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
                             <!-- <i class="fa-regular fa-location-pin"></i> -->
                             <!-- <i class="fi fi-rr-phone-call"></i> -->
                             <img src="images/marker.png">
-                            <p>105, gold Wing, AL Mankhool, BUR, Dubai (UAE)</p>
+                            <p>105, Gold Wing, AL Mankhool, BUR, Dubai (UAE)</p>
 
                         </div>
                         <div class="flag-contact">
